# Beam-Detector

./: CMakeLists.txt  README.md
src/: Global_hypothesis_verification.cpp  beam_cluster.cpp  beam_detector.cpp  correspondence_grouping.cpp  plane_detection.cpp  view_pcd.cpp
src/PCD/: object_templates.txt  outcloud.pcd  pointcloud_beam.pcd
